filegator/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: filegator

---

apiVersion: v1
kind: Service
metadata:
  name: filegator
  namespace: filegator
  labels:
    app: filegator
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  selector:
    app: filegator

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: filegator
  namespace: filegator
  labels:
    app: filegator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filegator
  template:
    metadata:
      labels:
        app: filegator
    spec:
      containers:
      - name: filegator
        image: filegator/filegator
        ports:
        - containerPort: 8080
