filegator/filegator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filegator-ingress
  namespace: filegator
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    kubernetes.io/ingress.class: "nginx"
  labels:
    k8s-app: filegator
spec:
  rules:
  - host: filegator.dev-cluster.amcon.cloud
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: filegator
            port:
              number: 8080
  tls:
  - hosts:
    - filegator.dev-cluster.amcon.cloud
    secretName: filegator.dev-cluster.amcon.cloud-tls
